5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1758_1576.log
== TEST (2019-05-23 10:55:17) 
-- CODE:
e = array(eval(input("joquempo:")))
b = array(eval(input("pedra, papel, tesoura:")))

y = 0 #eusapia
x = 0 #barasanulfo
i = 0
while(e == 11,22,33) and (b == 11,22,33):
	i = i + 1
	if(e == 11) and (b == 22):  #pedra x papel
		x = x + 1
	elif(e == 11) and (b == 33):#pedra x tesoura
		y = y  + 1
	elif(e == 11) and (b == 11):#pedra x pedra
		x = x + 0
		y = y + 0
	elif(e == 22) and (b == 11):#papel x pedra
		y = y + 1
	elif(e == 22) and (b == 22):#papel x papel
		x = x + 0
		y = y + 0
	elif(e == 22) and (b == 33):#papel x tesoura	
		x = x + 1
	elif(e == 33) and (b == 11):#tesoura x pedra
		x = x + 1
	elif(e == 33) and (b == 22):#tesoura x papel
		y = y + 1
	elif(e == 33) and (b == 33):#tesoura x tesoura
		x = x + 0
		y = y + 0
elif(x > y):
	print(i)
	print("BARSANULFO")
elif(y > x):
	print(i)
	print("EUSAPIA")
else:
	print(i)
	print("EMPATE")
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
-- ERROR:
File "XXXX", line 30
    elif(x > y):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:26) 
-- CODE:
e = array(eval(input("joquempo:")))
b = array(eval(input("pedra, papel, tesoura:")))

y = 0 #eusapia
x = 0 #barasanulfo
i = 0
while(e == 11,22,33) and (b == 11,22,33):
	i = i + 1
	if(e == 11) and (b == 22):  #pedra x papel
		x = x + 1
	elif(e == 11) and (b == 33):#pedra x tesoura
		y = y  + 1
	elif(e == 11) and (b == 11):#pedra x pedra
		x = x + 0
		y = y + 0
	elif(e == 22) and (b == 11):#papel x pedra
		y = y + 1
	elif(e == 22) and (b == 22):#papel x papel
		x = x + 0
		y = y + 0
	elif(e == 22) and (b == 33):#papel x tesoura	
		x = x + 1
	elif(e == 33) and (b == 11):#tesoura x pedra
		x = x + 1
	elif(e == 33) and (b == 22):#tesoura x papel
		y = y + 1
	elif(e == 33) and (b == 33):#tesoura x tesoura
		x = x + 0
		y = y + 0
if(x > y):
	print(i)
	print("BARSANULFO")
elif(y > x):
	print(i)
	print("EUSAPIA")
else:
	print(i)
	print("EMPATE")
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    e = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:56:02) 
-- CODE:
from numpy import*

e = array(eval(input("joquempo:")))
b = array(eval(input("pedra, papel, tesoura:")))

y = 0 #eusapia
x = 0 #barasanulfo
i = 0
while(e == 11,22,33) and (b == 11,22,33):
	i = i + 1
	if(e == 11) and (b == 22):  #pedra x papel
		x = x + 1
	elif(e == 11) and (b == 33):#pedra x tesoura
		y = y  + 1
	elif(e == 11) and (b == 11):#pedra x pedra
		x = x + 0
		y = y + 0
	elif(e == 22) and (b == 11):#papel x pedra
		y = y + 1
	elif(e == 22) and (b == 22):#papel x papel
		x = x + 0
		y = y + 0
	elif(e == 22) and (b == 33):#papel x tesoura	
		x = x + 1
	elif(e == 33) and (b == 11):#tesoura x pedra
		x = x + 1
	elif(e == 33) and (b == 22):#tesoura x papel
		y = y + 1
	elif(e == 33) and (b == 33):#tesoura x tesoura
		x = x + 0
		y = y + 0
if(x > y):
	print(i)
	print("BARSANULFO")
elif(y > x):
	print(i)
	print("EUSAPIA")
else:
	print(i)
	print("EMPATE")
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:07:38) 
-- CODE:
from numpy import*

e = array(eval(input("joquempo:")))
b = array(eval(input("pedra, papel, tesoura:")))

y = 0 #eusapia
x = 0 #barasanulfo
i = 0
while(i < size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		y = y + 1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		x = x + 1
		
	i = i + 1
if(x > y):
	print(i)
	print("BARSANULFO")
elif(y > x):
	print(i)
	print("EUSAPIA")
else:
	print(i)
	print("EMPATE")
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:08:00) 
-- CODE:
from numpy import*

e = array(eval(input("joquempo:")))
b = array(eval(input("pedra, papel, tesoura:")))

y = 0 #eusapia
x = 0 #barasanulfo
i = 0
while(i < size(e)):
	if(e[i] == 11 and b[i] == 33) or (e[i] == 22 and b[i] == 11) or (e[i] == 33 and b[i] == 22):
		y = y + 1
	elif(b[i] == 11 and e[i] == 33) or (b[i] == 22 and e[i] == 11) or (b[i] == 33 and e[i] == 22):
		x = x + 1
		
	i = i + 1
if(x > y):
	print(i)
	print("BARSANULFO")
elif(y > x):
	print(i)
	print("EUSAPIA")
else:
	print(i)
	print("EMPATE")
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.49067
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
